# xinchong

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_V2.md  CHANGELOG.md  README.md  auth.json  config.yaml  install.sh  pyproject.toml  requirements.txt  run_cli.py  run_web.py  xinchong  xinchong.py
scripts/: __init__.py  hunt_papers.py  log_evolution.py  safeguards.py  tgb_filter.py  version_upgrade.py
src/: api_client.py  conversation.py  dream_engine.py  heartflow.py
src/web/: app.py
src/web/templates/: __init__.py  index.html
src/xinchong/: __init__.py  setup.py  skills.py
src/xinchong/agent/: __init__.py  api_client.py  conversation.py
src/xinchong/config/: __init__.py
src/xinchong/core/: xinchong.py
src/xinchong/dream/: dream_engine.py
src/xinchong/memory/: store.py  vector_store.py
src/xinchong/psychology/: gad7.py  phq9.py
src/xinchong_old/: __init__.py
src/xinchong_old/agent/: api_client.py
src/xinchong_old/chat/: __init__.py
src/xinchong_old/core/: beauty.py  goodness.py  truth.py
src/xinchong_old/embodied/: dual_system.py
src/xinchong_old/setup/: __init__.py
workflows/: paper-hunter.yml
