[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xinchong"
version = "2.0.0"
description = "心虫 v2.0 - 集成 OpenClaw + OpenCode + Hermes 的 AI 伙伴"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "心虫团队", email = "xinchong@ai.com"}
]
keywords = ["ai", "agent", "consciousness", "emotion", "memory", "ethics", "psychology", "qq", "weixin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
full = [
    "numpy>=1.21.0",
]

[project.scripts]
xinchong = "xinchong.agent:main"
xinchong-cli = "xinchong.agent:run_cli"
xinchong-platform = "xinchong.agent:run_platform"

[project.urls]
Homepage = "https://github.com/yun520-1/xinchong"
Repository = "https://github.com/yun520-1/xinchong"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xinchong = ["*.md", "*.json"]